# final-trace

./: .env.example  .gitignore  HOST_CLIENT_HANDOFF.md  README.md  conftest.py  gt_detailed_analysis.txt  host-client.env.example  quick_test_real_scenarios.py  requirements-engine.txt  run_complete_lock_test.py  test_complete_lock_pipeline.py  test_complete_lock_pipeline_clean.py  test_final_lock_pipeline.py  test_local_session.py  test_pipeline_18_simple.py  test_wazuh_real_scenario.py  test_wazuh_scenarios.ps1  wazuh_local_test_report.md
configs/: engine.example.yaml  engine.real_trace.yaml  engine.wazuh.example.yaml  engine.yaml  engine_demo_wazuh.yaml
data/: trace_engine.db-shm  trace_engine.db-wal
deep-agent-backend/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
deep-agent-backend/src/trace_deep_agent/: __init__.py  control_tools.py  graph.py  model.py  phase_tools.py  presentation.py  project.py  query_tools.py  tools.py
deep-agent-backend/tests/: test_full_loop_streaming.py  test_tools.py
deep-agents-ui/: package.json
demo/: README.md  index.html  package-lock.json  package.json  server.py  soar_session_runner.py  test_api.py  test_chain.py  test_debug.py  test_final.py  test_proxy.py  test_seed.py  test_session.py  test_trace_nodes.py  test_verify.py  test_why_probes.py
docs/: DEEP_AGENTS_SETUP.md  Prior Knowledge Factory for Decision-Ledger LOCK.md  RFC-004-02 LOCK + 决策账（决策导向的对抗性溯因·单环整合版）(1).md  TRACE_ENGINE_DEPLOYMENT.md  question.md  wazuh.md
plans/: 001-remove-runtime-ground-truth-leakage.md  004-rebuild-voi-calibration.md  (+26 more)
(+547 files in other folders)
