[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-deep-agent"
version = "0.1.0"
description = "Deep Agents adapter for the LOCK trace investigation engine"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.6.10,<0.7",
  "langchain-openai>=1.3,<2",
  "langgraph-cli[inmem]>=0.4.24,<0.5",
  "httpx>=0.27",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

